Add batch loading utilities and video I/O support
- Implemented `load_batch` function for efficient loading of multiple MediaRef objects with automatic caching.
- Introduced `cleanup_cache` function to clear cached video containers.
- Created `ResourceCache` class for reference-counted resource management with LRU eviction.
- Added `VideoReader` and `VideoWriter` classes for handling video I/O using PyAV.
- Developed `PyAVVideoDecoder` and `TorchCodecVideoDecoder` for video decoding with caching support.
- Added tests for MediaRef properties, validation, serialization, and batch loading functionality.
- Included type hints and documentation for better code clarity and usability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,22 @@ authors = [
     { name = "Suhwan Choi", email = "milkclouds00@gmail.com" }
 ]
 requires-python = ">=3.9"
-dependencies = []
+dependencies = [
+    "pydantic>=2.0",  # Requires v2 API (BaseModel, Field)
+]
+
+[project.optional-dependencies]
+loader = [
+    "numpy",
+    "opencv-python",
+    "pillow",
+    "av",
+    "requests",
+]
+dev = [
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
+]
 
 [build-system]
 requires = ["uv_build>=0.9.5,<0.10.0"]
