--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ loader = [
     "pillow",
     "av",
     "requests",
+    "loguru",
 ]
 dev = [
     "pytest>=7.0",
@@ -25,5 +26,5 @@ dev = [
 ]
 
 [build-system]
-requires = ["uv_build>=0.9.5,<0.10.0"]
-build-backend = "uv_build"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
