--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,26 +15,21 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+    - uses: actions/checkout@v5
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+
+    - name: Install Python
+      run: uv python install ${{ matrix.python-version }}
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[loader,dev]"
+        uv pip install -e ".[loader,dev]"
+      env:
+        UV_SYSTEM_PYTHON: 1
     
     - name: Run tests
       run: |
         pytest --cov=mediaref --cov-report=xml --cov-report=term
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.13'
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: false
 
