--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,12 @@ jobs:
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
+      with:
+        python-version: ${{ matrix.python-version }}
+        enable-cache: true
 
-    - name: Install Python
-      run: uv python install ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        uv pip install -e ".[loader,dev]"
-      env:
-        UV_SYSTEM_PYTHON: 1
+    - name: Install the project
+      run: uv sync --locked --all-extras --dev
     
     - name: Run tests
       run: |
