--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,15 +16,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v5
-
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
+      with:
+        fetch-depth: 0
+    
+    - name: Setup Virtual Environment
+      uses: ./.github/actions/setup-venv
       with:
         python-version: ${{ matrix.python-version }}
-        enable-cache: true
+
+    - name: Setup uv
+      uses: ./.github/actions/setup-uv
 
     - name: Install the project
-      run: uv sync --locked --all-extras --dev
+      run: uv pip install -e ".[loader,dev]"
     
     - name: Run tests
       run: |
