--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,19 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v5
-      with:
-        fetch-depth: 0
-    
-    - name: Setup Virtual Environment
-      uses: ./.github/actions/setup-venv
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Setup uv
-      uses: ./.github/actions/setup-uv
+        enable-cache: true
 
     - name: Install the project
-      run: uv pip install -e ".[loader,dev]"
+      run: uv sync --locked --all-extras --dev
     
     - name: Run tests
       run: |
