--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         uv pip install -e ".[loader,dev]"
+      env:
+        UV_SYSTEM_PYTHON: 1
     
     - name: Run tests
       run: |
