--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,20 +14,23 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
+    defaults:
+      run:
+        shell: bash -el {0}
+
     steps:
     - uses: actions/checkout@v5
+      with:
+        fetch-depth: 0
 
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
+    - name: Setup uv
+      uses: ./.github/actions/setup-uv
+      with:
+        python-version: ${{ matrix.python-version }}
 
-    - name: Install Python
-      run: uv python install ${{ matrix.python-version }} --default
-    
     - name: Install dependencies
       run: |
         uv pip install -e ".[loader,dev]"
-      env:
-        UV_SYSTEM_PYTHON: 1
     
     - name: Run tests
       run: |
