--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0  # Fetch all history for version detection
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install Python 3.13
