--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,13 @@ dependencies = [
 video = [
     "av>=15.0",        # Video frame extraction (PyAV)
 ]
+
+[dependency-groups]
 dev = [
-    "pytest>=7.0",
-    "pytest-cov>=4.0",
-    "ipython",
+    "ipython>=8.18.1",
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.14.2",
 ]
 
 [tool.ruff]
