--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "pydantic>=2.0",   # Pydantic v2 has breaking changes
+    "pydantic>=2.0",   # Pydantic v2 has breaking changes on APIs
     "numpy", 
     "Pillow>=9.4.0",   # When PIL.Image.ExifTags was introduced
     "opencv-python",
